add test of commensure_q_points construction + fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ before_script:
 all_tests:
   script:
     - python $CI_PROJECT_DIR/tests/hashes/hashes.py
-    - cd $CI_PROJECT_DIR/tests/phonopy; python run_phonopy.py; cd ../..
-    - cd $CI_PROJECT_DIR/tests/md; python run_md.py; cd ../..
+    - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
+    - cd ../phonopy; python run_phonopy.py
+    - cd ../md; python run_md.py
     - $jtest $CI_PROJECT_DIR/examples/trajectory/pretty_json.ipynb
     - $jtest $CI_PROJECT_DIR/examples/trajectory/read_trajectory.ipynb
 #    - $jtest $CI_PROJECT_DIR/examples/phonopy/basics/phonopy.ipynb
