update docker image to use python3.6 instead of 3.7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ before_script:
   - pip install .
   - jtest="jupyter nbconvert --execute"
   - service mongodb start --ipv6
+  - python --version
 
 all_tests:
   script:
