--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ all_tests:
     - $jtest $CI_PROJECT_DIR/examples/trajectory/pretty_json.ipynb
     - $jtest $CI_PROJECT_DIR/examples/trajectory/read_trajectory.ipynb
 #    - $jtest $CI_PROJECT_DIR/examples/phonopy/basics/phonopy.ipynb
-    - $jtest $CI_PROJECT_DIR/examples/phono3py/phono3py.ipynb
+#    - $jtest $CI_PROJECT_DIR/examples/phono3py/basics/phono3py.ipynb
 #    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
