--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,8 @@ all_tests:
 #    - $jtest $CI_PROJECT_DIR/examples/phonopy/basics/phonopy.ipynb
 #    - $jtest $CI_PROJECT_DIR/examples/phono3py/basics/phono3py.ipynb
 #    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
-    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
-    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
+#    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
+#    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
     - python $CI_PROJECT_DIR/tests/fireworks/fireworks_test.py
     - python $CI_PROJECT_DIR/examples/material_fingerprints/material_fingerprints.py
 
