CI | add `cp hilde.cfg.template hilde.cfg` to have a configuration for running the tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: registry.gitlab.com/flokno/hilde:reference
 
 before_script:
+  - cp hilde.cfg.template hilde.cfg
   - pip install .
   - jtest="jupyter nbconvert --execute"
   - service mongodb start --ipv6
