--- a/examples/phonopy/settings.in
+++ b/examples/phonopy/settings.in
@@ -1,21 +1,17 @@
-# config file to control phonopy workflow
 [geometry]
-file = geometry.in
+file =             geometry.in
 
 [control]
 xc =               pw-lda
-sc_accuracy_rho =  1e-4
-charge_mix_param = 0.5
-output_level =     MD_light
 
 [control_kpt]
-density =         .5
+density =          3.5
 
 [basisset]
 type = light
 
 [socketio]
-port = 12345
+port = null
 
 [phonopy]
 supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
