--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,15 +13,11 @@ all_tests:
     - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
     - cd ../phonopy; python run_phonopy.py
     - cd ../md; python run_md.py
-    - $jtest $CI_PROJECT_DIR/examples/trajectory/pretty_json.ipynb
-    - $jtest $CI_PROJECT_DIR/examples/trajectory/read_trajectory.ipynb
-#    - $jtest $CI_PROJECT_DIR/examples/phonopy/basics/phonopy.ipynb
-#    - $jtest $CI_PROJECT_DIR/examples/phono3py/basics/phono3py.ipynb
-#    - python $CI_PROJECT_DIR/examples/hiphive/hiphive_al.py
-#    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
-#    - python $CI_PROJECT_DIR/examples/phonon_db/phonon_db.py
-    - python $CI_PROJECT_DIR/tests/fireworks/fireworks_test.py
-    - python $CI_PROJECT_DIR/examples/material_fingerprints/material_fingerprints.py
+    - cd ../fireworks; python fireworks_test.py
+    - cd $CI_PROJECT_DIR/examples/.devel
+    - $jtest trajectory/pretty_json.ipynb
+    - $jtest trajectory/read_trajectory.ipynb
+    - python material_fingerprints/material_fingerprints.py
 
 # devel:
 #   script:
