--- a/examples/phono3py/settings.in
+++ b/examples/phono3py/settings.in
@@ -20,6 +20,8 @@ type:                light
 supercell_matrix:  [-1, 1, 1, 1, -1, 1, 1, 1, -1]
 displacement: 0.03
 workdir: test_run
+cutoff_pair_distance: 1.0
+
 [restart]
 command:             python run_phono3py.py
 
