Allowing for phonopy and phono3py to be initialized together for parallel calculations

--- a/examples/fireworks/relaxation_phonopy_combined/k_pt.in
+++ b/examples/fireworks/relaxation_phonopy_combined/k_pt.in
@@ -14,9 +14,8 @@ port = null
 
 [kgrid_opt]
 maxsteps =   20
-#workdir =    /u/tpurcell/git/hilde/examples/fireworks/relaxation_phonopy_combined/test_run/kgrid
-workdir =    /home/purcell/git/hilde/examples/fireworks/relaxation_phonopy_combined/test_run/kgrid
-trajectory = ${workdir}/trajectory.yaml
+workdir = test_run/kgrid
+trajectory = trajectory.yaml
 kpts_density_init = 1
 dfunc_min = 1e-2
 even = True
