--- a/examples/phonopy/fireworks/settings.in
+++ b/examples/phonopy/fireworks/settings.in
@@ -31,5 +31,5 @@ fw_spec = null
 out_spec = "relaxed_atoms"
 mod_spec_add = "calculated_forces"
 from_db = False
-to_launcpad = True
+to_launchpad = True
 
