--- a/examples/phonopy/settings.in
+++ b/examples/phonopy/settings.in
@@ -4,9 +4,6 @@ file =             geometry.in
 [control]
 xc =               pw-lda
 
-[control_kpt]
-density =          3.5
-
 [basisset]
 type = light
 
@@ -15,7 +12,7 @@ port = null
 
 [phonopy]
 supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
-
+kpt_density =      3.5
 workdir =    test_run
 
 [restart]
