--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ all_tests:
     - cd ../md; python run_md.py
     - cd ../phonon_db; python phonon_db.py; python phonon_db.py;
     - cd ../fireworks; python fireworks_test.py
-    - cd $CI_PROJECT_DIR/examples/.devel
+    - cd $CI_PROJECT_DIR/examples/devel
     - $jtest trajectory/pretty_json.ipynb
     - $jtest trajectory/read_trajectory.ipynb
     - python material_fingerprints/material_fingerprints.py
