--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ all_tests:
     - cd ../phonopy; python run_phonopy.py
     - cd ../md; python run_md.py
     - cd ../phonon_db; python phonon_db.py; python phonon_db.py;
-      #    - cd ../fireworks; python fireworks_test.py
+    - cd ../fireworks; python fireworks_test.py
     - cd $CI_PROJECT_DIR/examples/devel
     - $jtest trajectory/pretty_json.ipynb
     - $jtest trajectory/read_trajectory.ipynb
