phono3py example | forgot to specify k_grid

--- a/examples/phono3py/settings.in
+++ b/examples/phono3py/settings.in
@@ -4,6 +4,9 @@ file =             geometry.in
 [control]
 xc =               pw-lda
 
+[control_kpt]
+density:             2
+
 [basisset]
 type = light
 
