--- a/examples/relaxation/settings.in
+++ b/examples/relaxation/settings.in
@@ -1,21 +1,21 @@
+# configfile written at 2019/01/28 15:14:44
+
 [geometry]
-file =            geometry.in
+file:                          geometry.in
 
 [control]
-xc =              pw-lda
+xc:                            pw-lda
 
 [control_kpt]
-density =         2
+density:                       2
 
 [basisset]
-type =           light
+type:                          light
 
 [socketio]
-port =           12345
+port:                          12345
 
 [relaxation]
-fmax =           0.01
-unit_cell =      True
-maxsteps =       20
-
-workdir =        test_run
+fmax:                          0.01
+unit_cell:                     True
+maxsteps:                      20
