redid phonopy workflows

--- a/examples/fireworks/general_workflow/workflow.in
+++ b/examples/fireworks/general_workflow/workflow.in
@@ -3,5 +3,5 @@
 file = geometry.in
 
 [workflow]
-step_files = ["k_pt.in", "light_relax.in", "phonons.in"]
+step_files = ["k_pt.in", "light_relax.in", 'tight_relax.in', "phonons.in"]
 fw = True
