--- a/examples/phono3py/fireworks/settings.in
+++ b/examples/phono3py/fireworks/settings.in
@@ -8,6 +8,9 @@ relativistic =       "atomic_zora scalar"
 vdw_correction_hirshfeld = True
 basis_threshold = 1e-10
 
+[geometry]
+file = geometry.in
+
 [control_kpt]
 density =         .5
 
@@ -23,12 +26,15 @@ displacement = 0.01
 fireworks = True
 serial = False
 
-[restart]
-command = python run_phonopy.py
+[phono3py]
+walltime = 1600
+supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
+workdir = test_run/phonopy
+analysis_workdir = test_run/phono3py/analysis
+displacement = 0.01
+fireworks = True
+serial = True
+cutoff_pair_distance = 5.0
 
 [fw_settings]
-in_spec_atoms = light_relaxed_atoms
-in_spec_calc = light_relaxed_calc
-from_db = True
-kpoint_density_spec = kgrid
-
+from_db = False
