phonon convergence now changes time more accurately by using actual calculation times, harmonic analysis still a work in progress

--- a/examples/fireworks/general_workflow/workflow.in
+++ b/examples/fireworks/general_workflow/workflow.in
@@ -3,5 +3,5 @@
 file = geometry.in
 
 [workflow]
-step_files = ["phonons.in", "harmonic_analysis.in"]
+step_files = ["harmonic_analysis.in"]
 fw = True
