--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,17 +9,17 @@ before_script:
 
 all_tests:
   script:
-    # - python $CI_PROJECT_DIR/tests/hashes/hashes.py
-    # - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
-    # - cd ../phonopy; python run_phonopy.py
-    # - python run_phono3py.py
-    # - cd ../md; python run_md.py
-    # - cd ../phonon_db; python phonon_db.py; python phonon_db.py;
+    - python $CI_PROJECT_DIR/tests/hashes/hashes.py
+    - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
+    - cd ../phonopy; python run_phonopy.py
+    - python run_phono3py.py
+    - cd ../md; python run_md.py
+    - cd ../phonon_db; python phonon_db.py; python phonon_db.py;
     - cd $CI_PROJECT_DIR/tests/fireworks; python fireworks_test.py
-    # - cd $CI_PROJECT_DIR/examples/devel
-    # - $jtest trajectory/pretty_json.ipynb
-    # - $jtest trajectory/read_trajectory.ipynb
-    # - python material_fingerprints/material_fingerprints.py
+    - cd $CI_PROJECT_DIR/examples/devel
+    - $jtest trajectory/pretty_json.ipynb
+    - $jtest trajectory/read_trajectory.ipynb
+    - python material_fingerprints/material_fingerprints.py
 
 # devel:
 #   script:
