--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: registry.gitlab.com/flokno/hilde:update
 
 before_script:
-  - cp hilde.cfg.template hilde.cfg
+  - cp hilderc.template ~/.hilderc
   - pip install .
   - jtest="jupyter nbconvert --execute"
   - service mongodb start --ipv6
