--- a/examples/phono3py/settings.in
+++ b/examples/phono3py/settings.in
@@ -14,7 +14,7 @@ type = light
 port = 12345
 
 [phono3py]
-trajectory_fc2 = phonopy_trajectory.yaml
+trajectory_fc2 = phonopy_trajectory.son
 supercell_matrix = [-1, 1, 1,  1, -1, 1,  1, 1, -1]
 
 [restart]
