--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,14 @@ python = "^3.7"
 numpy = "^1.16"
 scipy = "^1.3"
 matplotlib = "^3.1"
-son = "^0.1.4"
+son = "^0.1.6"
 spglib = "^1.12"
 phonopy = "^2.1"
-ase = "^3.17"
+ase = {git = "https://gitlab.com/ase/ase.git"}
 
 [tool.poetry.dev-dependencies]
 black = "^18.9b0"
+pytest = "^4.6"
 
 [tool.poetry.scripts]
 make_supercell = 'hilde.scripts.make_supercell:main'
