--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pymongo = {version = "^3.8",optional = true}
 fabric = {version = "^2.4",optional = true}
 paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
+click_completion = "^0.5.1"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
