--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = "^3.6, <4.0"
 numpy = "^1.16"
 scipy = "~1.2.1"
 matplotlib = "^3.1"
-son = "^0.2.1"
+son = "^0.2.2"
 spglib = "^1.12"
 phonopy = "^2.1"
 ase = {git = "https://gitlab.com/ase/ase.git"}
@@ -32,6 +32,7 @@ fabric = {version = "^2.4",optional = true}
 paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
 click_completion = "^0.5.1"
+progress = "^1.5"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
