--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ before_script:
 
 basic_tests:
   script:
-    - python $CI_PROJECT_DIR/tests/hashes/hashes.py
     - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
+    - cd ../hashes; python hashes.py
     - cd ../cli; bash test_cli.sh
     - cd ../anharmonicity_score; python test_r2.py
     - cd ../phonopy; python run_phonopy.py
@@ -28,8 +28,8 @@ all_tests:
   script:
     - pip install fireworks
       #    - pip install phono3py
-    - python $CI_PROJECT_DIR/tests/hashes/hashes.py
     - cd $CI_PROJECT_DIR/tests/commensurate_qpoints; python test_lattice_points.py
+    - cd ../hashes; python hashes.py
     - cd ../anharmonicity_score; python test_r2.py
     - cd ../phonopy; python run_phonopy.py
       #    - python run_phono3py.py
@@ -38,6 +38,6 @@ all_tests:
       #    - cd ../statistical_sampling; python run_stat_sampling.py
     - cd ../phonon_db; python phonon_db.py; python phonon_db.py;
     - cd ../trajectory; python test_son.py
-      #- cd $CI_PROJECT_DIR/tests/fireworks; python fireworks_test.py
+    - cd $CI_PROJECT_DIR/tests/fireworks; python fireworks_test.py
     - cd $CI_PROJECT_DIR/examples/devel
     - python material_fingerprints/material_fingerprints.py
