--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,14 @@ paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
 click_completion = "^0.5.1"
 progress = "^1.5"
+seaborn = {version = "^0.9.0",optional = true}
+jupyter = {version = "^1.0",optional = true}
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
 phono3py = ["phono3py"]
 postgresql = ["psycopg2"]
+handson = ["seaborn", "jupyter"]
 
 [tool.poetry.dev-dependencies]
 black = "^18.9b0"
