templates | `hilde template configuration` writes a `hilderc` for modification

--- a/hilde/templates/config_files/hilderc.template
+++ b/hilde/templates/config_files/hilderc.template
@@ -1,21 +1,10 @@
-# System informations, ADJUST!
-[common]
-email =             you@something.com
+# System informations to get hilde running, please adjust:
+# basissetloc: location of the FHIaims basissets
+# aims_command: prefereably a script that runs aims, or the command to run it,
+#                 e.g. `mpirun aims.x` or similar
+#
+# When adjusted, please copy to ~/.hilderc
 
 [machine]
  basissetloc =      /some/path/to/FHIaims/aimsfiles/species_defaults
  aims_command =     run_aims
-
-[database]
- location =         ~/hilde/examples/phonon_db
- name =             test.db
- db_path =          ${location}/${name}
-
-[watchdog]
-# 1800s = 30 minutes
-# 14400 = 4h
-# 86400 = 1d
-walltime = 1800
-
-[nomad]
-token = null
